weblogにdjangoproject.jpのロゴ追加

--- a/djangoja_website/templates/zinnia/skeleton.html
+++ b/djangoja_website/templates/zinnia/skeleton.html
@@ -80,9 +80,8 @@
       </div>
       <div id="sidebar">
         <div id="widget-welcome" class="widget">
-          <h3>ようこそ</h3>
           <p>
-            <a href="http://djangoproject.jp/">djangoproject.jp</a>より、Djangoの新着情報を配信しています
+            <a href="http://djangoproject.jp/"><img src="/m/django-ja-bg.jpg"></a>
           </p>
         </div>
         {% block sidebar %}
