base.html, zinnia/skeleton.html のメタ情報修正

--- a/djangoja_website/templates/base.html
+++ b/djangoja_website/templates/base.html
@@ -11,8 +11,8 @@
     <meta name="robots" content="follow, all" />
     <meta name="language" content="{{ LANGUAGE_CODE }}" />
     <meta name="viewport" content="width=device-width; initial-scale=1.0;" />
-    <meta name="description" content="{% block meta-description %}djangoproject.jp's news weblog.{% endblock %}" />
-    <meta name="keywords" content="{% block meta-keywords %}django, {{ entry_tags|join:", "}}{% endblock %}" />
+    <meta name="description" content="{% block meta-description %}Django et compagnie Japonais. Djangoと日本の仲間たち{% endblock %}" />
+    <meta name="keywords" content="{% block meta-keywords %}Python, Django, framework, open-source, Japanese, 日本語{% endblock %}" />
     <meta name="author" content="Fantomas42" />
     {% block meta %}{% endblock %}
     <link rel="pingback" href="/xmlrpc/" />
