media以下に画像用のディレクトリ、imgを追加

--- a/djangoja_website/templates/zinnia/skeleton.html
+++ b/djangoja_website/templates/zinnia/skeleton.html
@@ -67,7 +67,7 @@
   <div id="sidebar">
     <div id="widget-welcome" class="widget">
       <p>
-        <a href="http://djangoproject.jp/"><img src="/m/django-ja-bg.jpg"></a>
+        <a href="http://djangoproject.jp/"><img src="/m/img/django-ja-bg.jpg"></a>
       </p>
     </div>
     {% block sidebar %}
