zinnia/skeleton.html: fixed typo

--- a/djangoja_website/templates/zinnia/skeleton.html
+++ b/djangoja_website/templates/zinnia/skeleton.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen, projection" href="{{ STATIC_URL }}zinnia/css/ie.css" />
 <![endif]-->
 {% endblock %}
-{% block base-body-class %}zinnia {% block body-cloass %}{% endblock %}{% endblock %}
+{% block base-body-class %}zinnia {% block body-class %}{% endblock %}{% endblock %}
 {% block body %}
 <div class="container">
   <div id="header">
