CloudCoreロゴ画像変更

--- a/djangoja_website/templates/base_bootstrap.html
+++ b/djangoja_website/templates/base_bootstrap.html
@@ -39,8 +39,7 @@
          <a href="http://www.djangoproject.com/">Django</a> and the Django logo are registered trademarks of <a href="http://www.ljworld.com/">Lawrence Journal-World</a>.
       </div>
       <div class="span6">
-        <dl style="width:260px; height:36px; margin:0; padding:0;"><dt style=" margin:0; padding:0;">
-        <a href="http://www.cloudcore.jp/vps/?utm_source=ad&utm_medium=ad&utm_content=dev&utm_campaign=vps" target="_blank"><img src="http://www.cloudcore.jp/vps/develop/links/images/74x36_green.gif" alt="CloudCore" style="float:left; border:0; margin-right:5px;" /></a></dt><dd style="font-size:11px; line-height:140%; color:#aaaaaa; padding:4px 0 0 0; margin:0;">CloudCoreは<a href="http://www.cloudcore.jp/vps/?utm_source=ad&utm_medium=ad&utm_content=dev&utm_campaign=vps" target="_blank" style="color:#aaaaaa;">VPS</a>と<a href="http://www.cloudcore.jp/hybrid/?utm_source=ad&utm_medium=ad&utm_content=dev&utm_campaign=vps" target="_blank" style="color:#aaaaaa;">クラウド</a>で<br /><a href="http://www.cloudcore.jp/vps/develop/?utm_source=ad&utm_medium=ad&utm_content=dev&utm_campaign=vps" target="_blank" style="color:#aaaaaa;">オープンソース開発者</a>を支援します</dd></dl>
+        <div style="width:113px; height:53px; margin:0; padding:0;"><a href="http://www.cloudcore.jp/vps/?utm_source=ad&utm_medium=ad&utm_content=dev&utm_campaign=vps" target="_blank" rel="nofollow"><img src="http://www.cloudcore.jp/vps/develop/links/images/113x53_green.gif" alt="CloudCore" style="border:0; margin-bottom:4px;" /></a></div>
       </div>
     </div>
     {% endblock %}
