Fixed a header link to correspond for updating RTD

--- a/djangoja_website/templates/base_bootstrap.html
+++ b/djangoja_website/templates/base_bootstrap.html
@@ -28,7 +28,7 @@
             </a>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
               <li><a href="/doc/">1.0</a></li>
-              <li><a href="http://docs.djangoproject.jp/ja/latest/">1.4(翻訳中)</a></li>
+              <li><a href="http://docs.djangoproject.jp/en/latest/">1.4(翻訳中)</a></li>
             </ul>
           </li>
           {% get_flatpages as flatpases %}
