--- a/djangoprojectjp/moderna/templates/index.html
+++ b/djangoprojectjp/moderna/templates/index.html
@@ -39,16 +39,14 @@
 									  <a href="https://djangoproject.com/download/" class="btn btn-theme">Download</a>
                 </div>
               </li>
-							<!--
               <li>
                 <img src="{% static "img/slides/tdm.jpg" %}" alt="" />
                 <div class="flex-caption">
                     <h3>Tokyo Django Meetup</h3>
 					<p>Djangoのユーザーに会いに行く</p>
-					<a href="#" class="btn btn-theme">Learn More</a>
+					<a href="/events/" class="btn btn-theme">Learn More</a>
                 </div>
               </li>
-              -->
             </ul>
         </div>
 	<!-- end slider -->
