--- a/djangoprojectjp/moderna/templates/base.html
+++ b/djangoprojectjp/moderna/templates/base.html
@@ -5,8 +5,8 @@
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="{% block meta_keywords %}{% endblock %}">
-<meta name="description" content="{% block meta_description %}{% endblock %}">
+<meta name="keywords" content="{% block meta_keywords %}Python, Django, framework, open-source, Japanese, 日本語{% endblock %}" />
+<meta name="description" content="{% block meta_description %}Djangoと日本の仲間たち{% endblock %}" />
 <title>{% block meta_title %}{% endblock %}{% if settings.SITE_TITLE %} | {{ settings.SITE_TITLE }}{% endif %}</title>
 <link rel="shortcut icon" href="{% static "img/favicon.ico" %}">
 
