--- a/djangoprojectjp/moderna/templates/base.html
+++ b/djangoprojectjp/moderna/templates/base.html
@@ -207,7 +207,16 @@
 <script src="{% static "js/jquery.flexslider.js"%}"></script>
 <script src="{% static "js/animate.js"%}"></script>
 <script src="{% static "js/custom.js"%}"></script>
-{% endcompress %}
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-51972813-3', 'auto');
+  ga('send', 'pageview');
+
+</script>{% endcompress %}
 
 </body>
 </html>
