クエスチョンマークを含むフォントファイルをリネーム
- `Icons.eot?` -> `Icons_iefix.eot`

--- a/djangoproject.jp/static/css/custom-fonts.css
+++ b/djangoproject.jp/static/css/custom-fonts.css
@@ -5,7 +5,7 @@ Font-Face Icons
 @font-face {
 	font-family: 'Icons';
 	src:url('../fonts/customicon/Icons.eot');
-	src:url('../fonts/customicon/Icons.eot?#iefix') format('embedded-opentype'),
+	src:url('../fonts/customicon/Icons_iefix.eot') format('embedded-opentype'),
 		url('../fonts/customicon/Icons.woff') format('woff'),
 		url('../fonts/customicon/Icons.ttf') format('truetype'),
 		url('../fonts/customicon/Icons.svg#Icons') format('svg');
