Apply menus_footer

--- a/miya/templates/footer.html
+++ b/miya/templates/footer.html
@@ -2,15 +2,7 @@
 <div class="container">
 
 
-<div class="nav-footer"><ul class="list-unstyled"><li 
-            id="footer-menu-about"><a href="/about/">About</a></li><li 
-            id="footer-menu-whouses"><a href="/whouses/">利用実績</a></li></ul><ul class="list-unstyled"><li 
-            id="footer-menu-https:--docs.djangoproject.com-ja-"><a href="https://docs.djangoproject.com/ja/">documentation</a></li><li 
-            id="footer-menu-https:--docs.djangoproject.com-ja-2.2-"><a href="https://docs.djangoproject.com/ja/2.2/">2.2 ドキュメント</a></li><li 
-            id="footer-menu-translate"><a href="/translate/">翻訳への参加方法</a></li></ul><ul class="list-unstyled"><li 
-            id="footer-menu-community"><a href="/community/">Community</a></li><li 
-            id="footer-menu-events"><a href="/events/">Events</a></li></ul><ul class="list-unstyled"><li 
-            id="footer-menu--weblog-"><a href="/weblog/">Blog</a></li></ul></div>
+{% include 'menus_footer.html' %}
 
 <div id="sub-footer">
 <div class="row">
