--- a/miya/templates/menus_footer.html
+++ b/miya/templates/menus_footer.html
@@ -14,21 +14,21 @@
 <div class="nav-footer">
   {% set menu_item_list_for_page = page_hierarchy_in_menus[page.page_type] -%}
   {% for layer_1 in footer_items -%}
-  {% set layer_1__url, layer_1__menu_title = page_master[layer_1.html_id] -%}
+  {% set layer_1_master = page_master[layer_1.html_id] -%}
   <ul class="list-unstyled">
     <li
       class="{{ 'active' if layer_1.html_id in menu_item_list_for_page else '' }}"
       id="footer-menu-{{ layer_1.html_id }}"
     >
-      <a href="{{ layer_1__url }}">{{ layer_1__menu_title }}</a>
+      <a href="{{ layer_1_master.url }}">{{ layer_1_master.menu_title }}</a>
     </li>
-    {% for layer_2__html_id in layer_1.children -%}
-    {% set layer_2__url, layer_2__menu_title = page_master[layer_2__html_id] -%}
+    {% for layer_2_html_id in layer_1.children -%}
+    {% set layer_2_master = page_master[layer_2_html_id] -%}
     <li
-      class="{{ 'active' if layer_2__html_id in menu_item_list_for_page else '' }}"
-      id="footer-menu-{{ layer_2__html_id }}"
+      class="{{ 'active' if layer_2_html_id in menu_item_list_for_page else '' }}"
+      id="footer-menu-{{ layer_2_html_id }}"
     >
-      <a href="{{ layer_2__url }}">{{ layer_2__menu_title }}</a>
+      <a href="{{ layer_2_master.url }}">{{ layer_2_master.menu_title }}</a>
     </li>
     {% endfor %}
   </ul>
