--- a/miya/templates/data.html
+++ b/miya/templates/data.html
@@ -2,7 +2,11 @@
 
 {#
   各ページのマスター的な辞書。
-  dict[html_id, (url, menu_title)]
+  辞書のキー: html_id の文字列
+  辞書の値: {
+    url: URL (リンクの `href` 属性の値として使われる)
+    menu_title: メニュー項目 (グローバルナビゲーション、パンくず) における表示文字列
+  }
 
   ※documentation は外部サイトであるためキーの値が他と違う
   ※menu_title はおおむね page.cta_text と同じ
@@ -10,19 +14,60 @@
   なので、 cta_text とは別の概念として menu_title を用意した)
 -#}
 {% set page_master = {
-  'home': ('/', 'Home'),
+  'home': {
+    'url': '/',
+    'menu_title': 'Home',
+  },
 
-  'about': ('/about/', 'About'),
-  'community': ('/community/', 'Community'),
-  'events': ('/events/', 'Events'),
-  'howtojoin-transifex': ('/howtojoin-transifex/', 'Transifexへのユーザー登録とDjangoドキュメント翻訳プロジェクトへの参加方法'),
-  'howtotranslate': ('/howtotranslate/', 'TransifexでのDjangoドキュメント翻訳の進め方'),
-  'translate': ('/translate/', '翻訳への参加方法'),
-  'translate_old': ('/translate_old/', '旧ドキュメント翻訳方法'),
-  'whouses': ('/whouses/', '利用実績'),
+  'about': {
+    'url': '/about/',
+    'menu_title': 'About',
+  },
 
-  '-weblog-': ('/weblog/', 'Blog'),
-  'https:--docs.djangoproject.com-ja-': ('https://docs.djangoproject.com/ja/', 'documentation'),
+  'community': {
+    'url': '/community/',
+    'menu_title': 'Community',
+  },
+
+  'events': {
+    'url': '/events/',
+    'menu_title': 'Events',
+  },
+
+  'howtojoin-transifex': {
+    'url': '/howtojoin-transifex/',
+    'menu_title': 'Transifexへのユーザー登録とDjangoドキュメント翻訳プロジェクトへの参加方法',
+  },
+
+  'howtotranslate': {
+    'url': '/howtotranslate/',
+    'menu_title': 'TransifexでのDjangoドキュメント翻訳の進め方',
+  },
+
+  'translate': {
+    'url': '/translate/',
+    'menu_title': '翻訳への参加方法',
+  },
+
+  'translate_old': {
+    'url': '/translate_old/',
+    'menu_title': '旧ドキュメント翻訳方法',
+  },
+
+  'whouses': {
+    'url': '/whouses/',
+    'menu_title': '利用実績',
+  },
+
+  '-weblog-': {
+    'url': '/weblog/',
+    'menu_title': 'Blog',
+  },
+  
+  'https:--docs.djangoproject.com-ja-': {
+    'url': 'https://docs.djangoproject.com/ja/',
+    'menu_title': 'documentation',
+  },
 } -%}
 
 {#
