--- a/miya/templates/page_article.html
+++ b/miya/templates/page_article.html
@@ -1,1 +1,1 @@
-{% extends 'template_for_home.html' if page.page_type == 'home' else 'template_for_general.html' %}
+{% extends 'template_for_home.html' if page.html_id == 'home' else 'template_for_general.html' %}
