Open external link with a new tab (window)

--- a/miya/templates/footer.html
+++ b/miya/templates/footer.html
@@ -10,17 +10,17 @@
             <p>
             </p>
             <p>
-              Django is a <a href="https://www.djangoproject.com/trademarks/">registered trademark</a> of the Django Software Foundation.
+              Django is a <a href="https://www.djangoproject.com/trademarks/" target="_blank" rel="noopener">registered trademark</a> of the Django Software Foundation.
             </p>
           </div>
         </div>
 
         <div class="col-lg-6">
           <ul class="social-network">
-            <li><a title="" data-placement="top" href="https://twitter.com/django_ja" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></li>
-            <li><a title="" data-placement="top" href="https://groups.google.com/forum/#!forum/django-ja" data-original-title="Google Group"><i class="fa fa-users"></i></a></li>
-            <li><a title="" data-placement="top" href="https://django.connpass.com/" data-original-title="Connpass"><i class="fa fa-compass"></i></a></li>
-            <li><a title="" data-placement="top" href="https://github.com/django-ja/" data-original-title="GitHub"><i class="fa fa-github"></i></a></li>
+            <li><a title="" data-placement="top" href="https://twitter.com/django_ja" target="_blank" rel="noopener" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></li>
+            <li><a title="" data-placement="top" href="https://groups.google.com/forum/#!forum/django-ja" target="_blank" rel="noopener" data-original-title="Google Group"><i class="fa fa-users"></i></a></li>
+            <li><a title="" data-placement="top" href="https://django.connpass.com/" target="_blank" rel="noopener" data-original-title="Connpass"><i class="fa fa-compass"></i></a></li>
+            <li><a title="" data-placement="top" href="https://github.com/django-ja/" target="_blank" rel="noopener" data-original-title="GitHub"><i class="fa fa-github"></i></a></li>
           </ul>
         </div>
       </div>
