--- a/miya/templates/template_for_home.html
+++ b/miya/templates/template_for_home.html
@@ -47,7 +47,7 @@
                     <div class="flex-caption">
                       <h3>Meet Django</h3>
                       <p>よりよいWebを簡単に、高速に作る</p>
-                      <a href="https://djangoproject.com/download/" class="btn btn-theme">Download</a>
+                      <a href="https://djangoproject.com/download/" target="_blank" rel="noopener" class="btn btn-theme">Download</a>
                     </div>
                   </li>
 
@@ -100,7 +100,7 @@
                     </p>
                   </div>
                   <div class="box-bottom">
-                    <a href="https://www.djangoproject.com/start/">Learn more</a>
+                    <a href="https://www.djangoproject.com/start/" target="_blank" rel="noopener">Learn more</a>
                   </div>
                 </div>
               </div>
@@ -117,7 +117,7 @@
                     </p>
                   </div>
                   <div class="box-bottom">
-                    <a href="https://www.djangoproject.com/start/">Learn more</a>
+                    <a href="https://www.djangoproject.com/start/" target="_blank" rel="noopener">Learn more</a>
                   </div>
                 </div>
               </div>
@@ -134,7 +134,7 @@
                     </p>
                   </div>
                   <div class="box-bottom">
-                    <a href="https://www.djangoproject.com/start/">Learn more</a>
+                    <a href="https://www.djangoproject.com/start/" target="_blank" rel="noopener">Learn more</a>
                   </div>
                 </div>
               </div>
