--- a/miya/templates/template_for_home.html
+++ b/miya/templates/template_for_home.html
@@ -37,6 +37,12 @@
       <div class="col-md-none ">
         <!-- start slider -->
         <div class="container">
+          <div class="alert alert-info text-dark text-center">
+            <p>
+              2021年7月3日に、<a href="https://djangocongress.jp/" class="alert-link" target="_blank">DjangoCongress JP 2021が開催</a>されます。<br>
+              <a href="https://djangocongress.jp/#program" class="alert-link" target="_blank">Djangoに関する発表を募集</a>しています。<strong>応募締切は5月12日！</strong>
+            </p>
+          </div>
           <div class="row">
             <div class="col-lg-12">
               <!-- Slider -->
