トーク応募の文言を削除

--- a/miya/templates/template_for_home.html
+++ b/miya/templates/template_for_home.html
@@ -39,8 +39,7 @@
         <div class="container">
           <div class="alert alert-info text-dark text-center">
             <p>
-              2021年7月3日に、<a href="https://djangocongress.jp/" class="alert-link" target="_blank">DjangoCongress JP 2021が開催</a>されます。<br>
-              <a href="https://djangocongress.jp/#program" class="alert-link" target="_blank">Djangoに関する発表を募集</a>しています。<strong>応募締切は5月12日！</strong>
+              2021年7月3日に、<a href="https://djangocongress.jp/" class="alert-link" target="_blank">DjangoCongress JP 2021が開催</a>されます！
             </p>
           </div>
           <div class="row">
