Added DjangoCongress JP 2022 event link

--- a/miya/templates/template_for_home.html
+++ b/miya/templates/template_for_home.html
@@ -43,6 +43,15 @@
               <div id="main-slider" class="flexslider">
                 <ul class="slides">
                   <li>
+                    <img src="/static/img/slides/congress.jpg" alt="" />
+                    <div class="flex-caption">
+                      <h3>DjangoCongress JP</h3>
+                      <p>Djangoのユーザーに会いに行く</p>
+                      <a href="https://djangocongress.jp/" class="btn btn-theme">イベントページへ</a>
+                    </div>
+                  </li>
+
+                  <li>
                     <img src="/static/img/slides/django-logo.jpg" alt="" />
                     <div class="flex-caption">
                       <h3>Meet Django</h3>
@@ -51,14 +60,6 @@
                     </div>
                   </li>
 
-                  <li>
-                    <img src="/static/img/slides/congress.jpg" alt="" />
-                    <div class="flex-caption">
-                      <h3>DjangoCongress JP</h3>
-                      <p>Djangoのユーザーに会いに行く</p>
-                      <a href="/events/" class="btn btn-theme">Learn More</a>
-                    </div>
-                  </li>
                 </ul>
               </div>
               <!-- end slider -->
