Desc about DjangoCongress JP 2023!

--- a/miya/templates/template_for_home.html
+++ b/miya/templates/template_for_home.html
@@ -37,17 +37,15 @@
       <div class="col-md-none ">
         <!-- start slider -->
         <div class="container">
-          {#
           <div class="alert alert-info text-dark text-center">
             <p>
               <a
-                    href="https://docs.google.com/forms/d/e/1FAIpQLSfjvgXQ2HeHuQqpq5zPXBNN1xH32uqR-Z2iLUygxr2phmRcIA/viewform"
+                    href="https://forms.gle/2W3U7qU1r4P5ATMfA"
                     class="alert-link"
                     target="_blank"
-            >DjangoCongress JP 2022のトークを募集中</a>です！締切は8月12日
+            >DjangoCongress JP 2023のトークを募集中</a>です！締切は8月21日
             </p>
           </div>
-           #}
           <div class="row">
             <div class="col-lg-12">
               <!-- Slider -->
