--- a/miya/templates/template_for_home.html
+++ b/miya/templates/template_for_home.html
@@ -37,7 +37,7 @@
       <div class="col-md-none ">
         <!-- start slider -->
         <div class="container">
-          <div class="alert alert-info text-dark text-center">
+          {# <div class="alert alert-info text-dark text-center">
             <p>
               <a
                     href="https://forms.gle/2W3U7qU1r4P5ATMfA"
@@ -45,7 +45,7 @@
                     target="_blank"
             >DjangoCongress JP 2023のトークを募集中</a>です！締切は8月21日
             </p>
-          </div>
+          </div> #}
           <div class="row">
             <div class="col-lg-12">
               <!-- Slider -->
