--- a/miya/templates/template_for_home.html
+++ b/miya/templates/template_for_home.html
@@ -37,15 +37,15 @@
       <div class="col-md-none ">
         <!-- start slider -->
         <div class="container">
-          {# <div class="alert alert-info text-dark text-center">
+          <div class="alert alert-info text-dark text-center">
             <p>
-              <a
-                    href="https://forms.gle/2W3U7qU1r4P5ATMfA"
+              【特報】<a
+                    href="https://django.connpass.com/event/295303/"
                     class="alert-link"
                     target="_blank"
-            >DjangoCongress JP 2023のトークを募集中</a>です！締切は8月21日
+              >DjangoCongress JP 2023のチケット発売中！</a>
             </p>
-          </div> #}
+          </div>
           <div class="row">
             <div class="col-lg-12">
               <!-- Slider -->
