Disabled link for DjangoCongress JP

--- a/miya/templates/template_for_home.html
+++ b/miya/templates/template_for_home.html
@@ -37,7 +37,7 @@
       <div class="col-md-none ">
         <!-- start slider -->
         <div class="container">
-          <div class="alert alert-info text-dark text-center">
+          {# <div class="alert alert-info text-dark text-center">
             <p>
               【特報】<a
                     href="https://django.connpass.com/event/295303/"
@@ -45,7 +45,7 @@
                     target="_blank"
               >DjangoCongress JP 2023のチケット発売中！</a>
             </p>
-          </div>
+          </div> #}
           <div class="row">
             <div class="col-lg-12">
               <!-- Slider -->
