Added PyCon APAC 2023 poster session

--- a/miya/templates/template_for_home.html
+++ b/miya/templates/template_for_home.html
@@ -37,15 +37,15 @@
       <div class="col-md-none ">
         <!-- start slider -->
         <div class="container">
-          {# <div class="alert alert-info text-dark text-center">
+          <div class="alert alert-info text-dark text-center">
             <p>
-              【特報】<a
-                    href="https://django.connpass.com/event/295303/"
+              <a
+                    href="/whouses/pyconapac2023-django-ja.pdf"
                     class="alert-link"
                     target="_blank"
-              >DjangoCongress JP 2023のチケット発売中！</a>
+              >【2023年】Djangoの利用状況アンケートを集計しました</a><br><span>（PyCon APAC 2023ポスターセッション）</span>
             </p>
-          </div> #}
+          </div>
           <div class="row">
             <div class="col-lg-12">
               <!-- Slider -->
